Commit before start bugFix